Updated authentication
