# app/src/main/java/pl/bartpos24/shopmobile/api/OauthRefreshAuthenticator.kt
@@ -20,38 +20,38 @@ import timber.log.Timber
 //    }
 //}
 
-class OauthRefreshAuthenticator(private val tokenRepository: Lazy<TokenRepository>) : Authenticator {
-    override fun authenticate(route: Route?, response: Response): Request? {
-        Timber.d("Detected authentication error ${response.code } on ${response.request.url}")
-        return reAuthenticateRequestUsingRefreshToken(response.request).also {
-            Timber.d("New request ${it?.body} ${it?.url} ")
-        }
-    }
+//class OauthRefreshAuthenticator(private val tokenRepository: Lazy<TokenRepository>) : Authenticator {
+//    override fun authenticate(route: Route?, response: Response): Request? {
+//        Timber.d("Detected authentication error ${response.code } on ${response.request.url}")
+//        return reAuthenticateRequestUsingRefreshToken(response.request).also {
+//            Timber.d("New request ${it?.body} ${it?.url} ")
+//        }
+//    }
 
-    @Synchronized
-    private fun reAuthenticateRequestUsingRefreshToken(staleRequest: Request): Request? {
-        return tokenRepository.get()?.let {
-            if (it.getRefreshToken().get().isBlank()) {
-                return null
-                MainActivity.loginAuth.setStatus(LoginStatus.UNAUTHENTICATED)
-            }
-            if (staleRequest.header("Authorization") == it.getHeaderFormattedAccessToken()) {
-                Timber.d("Obtaining new authorization token.")
-                runBlocking {
-                    it.refreshAccessToken()?.let { newTokenPair ->
-                        Timber.d("Obtained $newTokenPair")
-                        newTokenPair.refreshToken?.let { refreshToken -> it.setNewRefreshToken(refreshToken) }
-                        staleRequest.newBuilder()
-                            .header("Authorization", createAuthorizationHeader(newTokenPair.accessToken!!))
-                            .build()
-                    }
-                }
-            } else {
-                Timber.d("New access token was already obtained. Changed from ${staleRequest.header("Authorization")} to ${it.getHeaderFormattedAccessToken()}")
-                staleRequest.newBuilder()
-                    .header("Authorization", it.getHeaderFormattedAccessToken())
-                    .build()
-            }
-        }
-    }
-}
+//    @Synchronized
+//    private fun reAuthenticateRequestUsingRefreshToken(staleRequest: Request): Request? {
+//        return tokenRepository.get()?.let {
+//            if (it.getRefreshToken().get().isBlank()) {
+//                return null
+//                MainActivity.loginAuth.setStatus(LoginStatus.UNAUTHENTICATED)
+//            }
+//            if (staleRequest.header("Authorization") == it.getHeaderFormattedAccessToken()) {
+//                Timber.d("Obtaining new authorization token.")
+//                runBlocking {
+//                    it.refreshAccessToken()?.let { newTokenPair ->
+//                        Timber.d("Obtained $newTokenPair")
+//                        newTokenPair.refreshToken?.let { refreshToken -> it.setNewRefreshToken(refreshToken) }
+//                        staleRequest.newBuilder()
+//                            .header("Authorization", createAuthorizationHeader(newTokenPair.accessToken!!))
+//                            .build()
+//                    }
+//                }
+//            } else {
+//                Timber.d("New access token was already obtained. Changed from ${staleRequest.header("Authorization")} to ${it.getHeaderFormattedAccessToken()}")
+//                staleRequest.newBuilder()
+//                    .header("Authorization", it.getHeaderFormattedAccessToken())
+//                    .build()
+//            }
+//        }
+//    }
+//}
